// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Form Component facet props should clear facet_value and validation when facet_name is set to ALL and signals threshold 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Name"
        name="name"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="This assignment is permanent."
        label="Alert Type"
        name="alert_metric"
        options={
          Array [
            Object {
              "label": "Monthly Sending Limit",
              "value": "monthly_sending_limit",
            },
            Object {
              "label": "Health Score",
              "value": "signals_health_threshold",
            },
            Object {
              "label": "Health Score - Day over Day",
              "value": "signals_health_dod",
            },
            Object {
              "label": "Health Score - Week over Week",
              "value": "signals_health_wow",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Account"
        name="assignTo"
        options={
          Array [
            Object {
              "label": "Master and all subaccounts",
              "value": "all",
            },
            Object {
              "label": "Master account only",
              "value": "master",
            },
            Object {
              "label": "Single Subaccount",
              "value": "subaccount",
            },
          ]
        }
      />
      <label>
        Facet
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="facet_name"
                  options={
                    Array [
                      Object {
                        "label": "None",
                        "value": "ALL",
                      },
                      Object {
                        "label": "Sending Domain",
                        "value": "sending_domain",
                      },
                      Object {
                        "label": "IP Pool",
                        "value": "ip_pool",
                      },
                      Object {
                        "label": "Campaign ID",
                        "value": "campaign_id",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={true}
              name="facet_value"
              placeholder="No facet selected"
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <label>
        Criteria
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="threshold.error.comparator"
                  options={
                    Array [
                      Object {
                        "label": "Below",
                        "value": "lt",
                      },
                      Object {
                        "label": "Above",
                        "value": "gt",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="threshold.error.target"
              prefix=""
              style={
                Object {
                  "textAlign": "right",
                }
              }
              suffix=""
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Field
        component={[Function]}
        disabled={false}
        label="Notify"
        multiline={true}
        name="email_addresses"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Grid>
        <Grid.Column
          md={1}
          xs={1}
        >
          <label>
            Enabled
          </label>
        </Grid.Column>
        <Grid.Column
          md={1}
          xs={1}
        >
          <div>
            <Field
              component={[Function]}
              disabled={false}
              name="enabled"
              parse={[Function]}
              type="checkbox"
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update Alert
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;

exports[`Alert Form Component facet props should clear facet_value and validation when facet_name is set to ALL and signals threshold 2`] = `
<Form
  onSubmit={[MockFunction]}
>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Name"
        name="name"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="This assignment is permanent."
        label="Alert Type"
        name="alert_metric"
        options={
          Array [
            Object {
              "label": "Monthly Sending Limit",
              "value": "monthly_sending_limit",
            },
            Object {
              "label": "Health Score",
              "value": "signals_health_threshold",
            },
            Object {
              "label": "Health Score - Day over Day",
              "value": "signals_health_dod",
            },
            Object {
              "label": "Health Score - Week over Week",
              "value": "signals_health_wow",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Account"
        name="assignTo"
        options={
          Array [
            Object {
              "label": "Master and all subaccounts",
              "value": "all",
            },
            Object {
              "label": "Master account only",
              "value": "master",
            },
            Object {
              "label": "Single Subaccount",
              "value": "subaccount",
            },
          ]
        }
      />
      <label>
        Facet
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="facet_name"
                  options={
                    Array [
                      Object {
                        "label": "None",
                        "value": "ALL",
                      },
                      Object {
                        "label": "Sending Domain",
                        "value": "sending_domain",
                      },
                      Object {
                        "label": "IP Pool",
                        "value": "ip_pool",
                      },
                      Object {
                        "label": "Campaign ID",
                        "value": "campaign_id",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="facet_value"
              placeholder=""
              validate={[Function]}
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <label>
        Criteria
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={false}
              disabled={false}
              name="threshold.error.target"
              prefix="Above"
              style={
                Object {
                  "textAlign": "right",
                }
              }
              suffix="%"
              validate={[Function]}
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Field
        component={[Function]}
        disabled={false}
        label="Notify"
        multiline={true}
        name="email_addresses"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Grid>
        <Grid.Column
          md={1}
          xs={1}
        >
          <label>
            Enabled
          </label>
        </Grid.Column>
        <Grid.Column
          md={1}
          xs={1}
        >
          <div>
            <Field
              component={[Function]}
              disabled={false}
              name="enabled"
              parse={[Function]}
              type="checkbox"
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update Alert
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;

exports[`Alert Form Component should handle submit 1`] = `
<Form
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Name"
        name="name"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="This assignment is permanent."
        label="Alert Type"
        name="alert_metric"
        options={
          Array [
            Object {
              "label": "Monthly Sending Limit",
              "value": "monthly_sending_limit",
            },
            Object {
              "label": "Health Score",
              "value": "signals_health_threshold",
            },
            Object {
              "label": "Health Score - Day over Day",
              "value": "signals_health_dod",
            },
            Object {
              "label": "Health Score - Week over Week",
              "value": "signals_health_wow",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Account"
        name="assignTo"
        options={
          Array [
            Object {
              "label": "Master and all subaccounts",
              "value": "all",
            },
            Object {
              "label": "Master account only",
              "value": "master",
            },
            Object {
              "label": "Single Subaccount",
              "value": "subaccount",
            },
          ]
        }
      />
      <label>
        Facet
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="facet_name"
                  options={
                    Array [
                      Object {
                        "label": "None",
                        "value": "ALL",
                      },
                      Object {
                        "label": "Sending Domain",
                        "value": "sending_domain",
                      },
                      Object {
                        "label": "IP Pool",
                        "value": "ip_pool",
                      },
                      Object {
                        "label": "Campaign ID",
                        "value": "campaign_id",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="facet_value"
              placeholder=""
              validate={[Function]}
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <label>
        Criteria
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="threshold.error.comparator"
                  options={
                    Array [
                      Object {
                        "label": "Below",
                        "value": "lt",
                      },
                      Object {
                        "label": "Above",
                        "value": "gt",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="threshold.error.target"
              prefix=""
              style={
                Object {
                  "textAlign": "right",
                }
              }
              suffix=""
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Field
        component={[Function]}
        disabled={false}
        label="Notify"
        multiline={true}
        name="email_addresses"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Grid>
        <Grid.Column
          md={1}
          xs={1}
        >
          <label>
            Enabled
          </label>
        </Grid.Column>
        <Grid.Column
          md={1}
          xs={1}
        >
          <div>
            <Field
              component={[Function]}
              disabled={false}
              name="enabled"
              parse={[Function]}
              type="checkbox"
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update Alert
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;

exports[`Alert Form Component should render the alert form component correctly 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Name"
        name="name"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="This assignment is permanent."
        label="Alert Type"
        name="alert_metric"
        options={
          Array [
            Object {
              "label": "Monthly Sending Limit",
              "value": "monthly_sending_limit",
            },
            Object {
              "label": "Health Score",
              "value": "signals_health_threshold",
            },
            Object {
              "label": "Health Score - Day over Day",
              "value": "signals_health_dod",
            },
            Object {
              "label": "Health Score - Week over Week",
              "value": "signals_health_wow",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Account"
        name="assignTo"
        options={
          Array [
            Object {
              "label": "Master and all subaccounts",
              "value": "all",
            },
            Object {
              "label": "Master account only",
              "value": "master",
            },
            Object {
              "label": "Single Subaccount",
              "value": "subaccount",
            },
          ]
        }
      />
      <label>
        Facet
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="facet_name"
                  options={
                    Array [
                      Object {
                        "label": "None",
                        "value": "ALL",
                      },
                      Object {
                        "label": "Sending Domain",
                        "value": "sending_domain",
                      },
                      Object {
                        "label": "IP Pool",
                        "value": "ip_pool",
                      },
                      Object {
                        "label": "Campaign ID",
                        "value": "campaign_id",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="facet_value"
              placeholder=""
              validate={[Function]}
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <label>
        Criteria
      </label>
      <Grid>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div>
            <Field
              component={[Function]}
              connectLeft={
                <Field
                  component={[Function]}
                  disabled={false}
                  name="threshold.error.comparator"
                  options={
                    Array [
                      Object {
                        "label": "Below",
                        "value": "lt",
                      },
                      Object {
                        "label": "Above",
                        "value": "gt",
                      },
                    ]
                  }
                  validate={[Function]}
                />
              }
              disabled={false}
              name="threshold.error.target"
              prefix=""
              style={
                Object {
                  "textAlign": "right",
                }
              }
              suffix=""
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Field
        component={[Function]}
        disabled={false}
        label="Notify"
        multiline={true}
        name="email_addresses"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
      <Grid>
        <Grid.Column
          md={1}
          xs={1}
        >
          <label>
            Enabled
          </label>
        </Grid.Column>
        <Grid.Column
          md={1}
          xs={1}
        >
          <div>
            <Field
              component={[Function]}
              disabled={false}
              name="enabled"
              parse={[Function]}
              type="checkbox"
            />
          </div>
        </Grid.Column>
      </Grid>
      <br />
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update Alert
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;
